fix: prevent thumbnails from becoming too large in the tags view

--- a/static/style.css
+++ b/static/style.css
@@ -411,6 +411,10 @@ hr {
     width: 33%;
 }
 
+.tag-item a {
+    overflow: hidden;
+}
+
 .tag-data {
     display: flex;
     flex-direction: column;
